Implemented analysis_utils.py

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -39,7 +39,13 @@
     "    'markers': {},\n",
     "    'analysis': {},\n",
     "    'plots': []\n",
-    "}"
+    "}\n",
+    "\n",
+    "from analysis_utils import (\n",
+    "    prepare_event_markers_timestamps,\n",
+    "    find_timestamp_offset,\n",
+    "    extract_window_data\n",
+    ")"
    ]
   },
   {
@@ -76,142 +82,6 @@
     "print(f\"\\n✓ Analysis complete! Results saved to {results_path}\")\n",
     "print(f\"Status: {results['status']}\")\n",
     "print(f\"Plots generated: {len(results['plots'])}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63540015",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def prepare_event_markers_timestamps(event_markers_df):\n",
-    "    \"\"\"\n",
-    "    Prepare event markers dataframe to ensure it has unix_timestamp column.\n",
-    "    Handles backward compatibility for files that use 'timestamp' with ISO format.\n",
-    "    \n",
-    "    Returns: Modified dataframe with 'unix_timestamp' column\n",
-    "    \"\"\"\n",
-    "    df = event_markers_df.copy()\n",
-    "    \n",
-    "    # Check if unix_timestamp already exists\n",
-    "    if 'unix_timestamp' in df.columns:\n",
-    "        print(\"  ✓ Found 'unix_timestamp' column\")\n",
-    "        return df\n",
-    "    \n",
-    "    # Check for 'timestamp' column (backward compatibility)\n",
-    "    if 'timestamp' in df.columns:\n",
-    "        print(\"  ✓ Found 'timestamp' column (ISO format) - converting to unix_timestamp\")\n",
-    "        \n",
-    "        # Convert ISO format timestamps to Unix timestamps\n",
-    "        dt_series = pd.to_datetime(df['timestamp'], errors='coerce')\n",
-    "        df['unix_timestamp'] = (dt_series - pd.Timestamp(\"1970-01-01\")) / pd.Timedelta('1s')\n",
-    "        \n",
-    "        # Drop NaN values\n",
-    "        before = len(df)\n",
-    "        df = df.dropna(subset=['unix_timestamp'])\n",
-    "        after = len(df)\n",
-    "        \n",
-    "        if before > after:\n",
-    "            print(f\"  ⚠ Dropped {before - after} rows with invalid timestamps\")\n",
-    "        \n",
-    "        print(f\"  ✓ Converted {after} timestamps from ISO to Unix format\")\n",
-    "        \n",
-    "        return df\n",
-    "    \n",
-    "    # Neither column found\n",
-    "    raise ValueError(\"Event markers file must have either 'unix_timestamp' or 'timestamp' column\")\n",
-    "\n",
-    "def find_timestamp_offset(event_markers_df, emotibit_df):\n",
-    "    \"\"\"\n",
-    "    Find the timestamp offset between event markers and emotibit data.\n",
-    "    Returns the offset in seconds that should be added to emotibit timestamps.\n",
-    "    \"\"\"\n",
-    "    event_marker_start = event_markers_df['unix_timestamp'].min()\n",
-    "    emotibit_start = emotibit_df['LocalTimestamp'].min()\n",
-    "    \n",
-    "    offset = event_marker_start - emotibit_start\n",
-    "    \n",
-    "    print(f\"  Event Marker Start: {datetime.fromtimestamp(event_marker_start)}\")\n",
-    "    print(f\"  EmotiBit Start: {datetime.fromtimestamp(emotibit_start)}\")\n",
-    "    print(f\"  Calculated Offset: {offset:.2f}s ({offset/3600:.2f} hours)\")\n",
-    "    \n",
-    "    return offset\n",
-    "\n",
-    "def extract_window_data(emotibit_df, event_markers_df, offset, window_config):\n",
-    "    \"\"\"\n",
-    "    Extract data from emotibit dataframe based on window configuration.\n",
-    "    \n",
-    "    Args:\n",
-    "        emotibit_df: DataFrame with biometric data\n",
-    "        event_markers_df: DataFrame with event markers\n",
-    "        offset: Timestamp offset to apply\n",
-    "        window_config: Dict with 'eventMarker', 'timeWindowType', 'customStart', 'customEnd'\n",
-    "    \n",
-    "    Returns:\n",
-    "        DataFrame with data from the specified window\n",
-    "    \"\"\"\n",
-    "    # Apply offset to emotibit timestamps\n",
-    "    emotibit_df = emotibit_df.copy()\n",
-    "    emotibit_df['AdjustedTimestamp'] = emotibit_df['LocalTimestamp'] + offset\n",
-    "    \n",
-    "    # Get the metric column name (last column)\n",
-    "    metric_col = emotibit_df.columns[-1]\n",
-    "    \n",
-    "    # Find all occurrences of the event marker\n",
-    "    event_marker = window_config['eventMarker']\n",
-    "    marker_rows = event_markers_df[event_markers_df['event_marker'] == event_marker]\n",
-    "    \n",
-    "    if len(marker_rows) == 0:\n",
-    "        print(f\"  ⚠ Warning: No occurrences of event marker '{event_marker}' found\")\n",
-    "        return pd.DataFrame()\n",
-    "    \n",
-    "    print(f\"  Found {len(marker_rows)} occurrences of '{event_marker}'\")\n",
-    "    \n",
-    "    # Extract data for each occurrence\n",
-    "    all_data = []\n",
-    "    \n",
-    "    for idx, marker_row in marker_rows.iterrows():\n",
-    "        marker_time = marker_row['unix_timestamp']\n",
-    "        \n",
-    "        if window_config['timeWindowType'] == 'full':\n",
-    "            # Full event duration - find next event marker or end of data\n",
-    "            next_markers = event_markers_df[\n",
-    "                (event_markers_df['unix_timestamp'] > marker_time) &\n",
-    "                (event_markers_df['event_marker'].notna()) &\n",
-    "                (event_markers_df['event_marker'] != '')\n",
-    "            ]\n",
-    "            \n",
-    "            if len(next_markers) > 0:\n",
-    "                end_time = next_markers.iloc[0]['unix_timestamp']\n",
-    "            else:\n",
-    "                end_time = event_markers_df['unix_timestamp'].max()\n",
-    "            \n",
-    "            window_data = emotibit_df[\n",
-    "                (emotibit_df['AdjustedTimestamp'] >= marker_time) &\n",
-    "                (emotibit_df['AdjustedTimestamp'] < end_time)\n",
-    "            ].copy()\n",
-    "            \n",
-    "        else:  # custom time window\n",
-    "            start_offset = window_config['customStart']\n",
-    "            end_offset = window_config['customEnd']\n",
-    "            \n",
-    "            window_data = emotibit_df[\n",
-    "                (emotibit_df['AdjustedTimestamp'] >= marker_time + start_offset) &\n",
-    "                (emotibit_df['AdjustedTimestamp'] <= marker_time + end_offset)\n",
-    "            ].copy()\n",
-    "        \n",
-    "        if len(window_data) > 0:\n",
-    "            all_data.append(window_data)\n",
-    "    \n",
-    "    # Concatenate all windows\n",
-    "    if len(all_data) == 0:\n",
-    "        return pd.DataFrame()\n",
-    "    \n",
-    "    combined_data = pd.concat(all_data, ignore_index=True)\n",
-    "    print(f\"  Extracted {len(combined_data)} data points across all occurrences\")\n",
-    "    \n",
-    "    return combined_data"
    ]
   },
   {
