--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fd3a4bb5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-09T17:47:28.434782Z",
-     "iopub.status.busy": "2025-10-09T17:47:28.434649Z",
-     "iopub.status.idle": "2025-10-09T17:47:29.156262Z",
-     "shell.execute_reply": "2025-10-09T17:47:29.155849Z"
+     "iopub.execute_input": "2025-10-14T16:35:19.667760Z",
+     "iopub.status.busy": "2025-10-14T16:35:19.667496Z",
+     "iopub.status.idle": "2025-10-14T16:35:20.236880Z",
+     "shell.execute_reply": "2025-10-14T16:35:20.236604Z"
     }
    },
    "outputs": [],
@@ -30,12 +30,10 @@
     "    extract_window_data\n",
     ")\n",
     "\n",
-    "# Configure paths\n",
     "DATA_FOLDER = 'data'\n",
     "OUTPUT_FOLDER = 'data/outputs'\n",
     "os.makedirs(OUTPUT_FOLDER, exist_ok=True)\n",
     "\n",
-    "# Initialize results structure\n",
     "results = {\n",
     "    'status': 'processing',\n",
     "    'timestamp': datetime.now().isoformat(),\n",
@@ -50,14 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6d62722e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-09T17:47:29.525064Z",
-     "iopub.status.busy": "2025-10-09T17:47:29.524939Z",
-     "iopub.status.idle": "2025-10-09T17:47:29.528950Z",
-     "shell.execute_reply": "2025-10-09T17:47:29.528576Z"
+     "iopub.execute_input": "2025-10-14T16:35:20.238488Z",
+     "iopub.status.busy": "2025-10-14T16:35:20.238361Z",
+     "iopub.status.idle": "2025-10-14T16:35:20.241601Z",
+     "shell.execute_reply": "2025-10-14T16:35:20.241393Z"
     }
    },
    "outputs": [
@@ -68,7 +66,7 @@
       "\n",
       "✓ Analysis complete! Results saved to data/outputs/results.json\n",
       "Status: completed\n",
-      "Plots generated: 3\n"
+      "Plots generated: 0\n"
      ]
     }
    ],
@@ -88,8 +86,41 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f17c4dd4",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-14T16:35:20.242877Z",
+     "iopub.status.busy": "2025-10-14T16:35:20.242772Z",
+     "iopub.status.idle": "2025-10-14T16:35:20.345168Z",
+     "shell.execute_reply": "2025-10-14T16:35:20.344900Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1. LOADING CONFIGURATION\n",
+      "--------------------------------------------------------------------------------\n",
+      "Using subject folder: G3_1.4.2_2025-05-22T204215.885316_eGFub25vdmFhcmlhQHlhaG9vLmNvbQ\n",
+      "✓ Manifest loaded\n",
+      "  EmotiBit files: 1\n",
+      "  Event markers: Yes\n",
+      "  Selected metrics: ['HR']\n",
+      "  Baseline window: biometric_baseline\n",
+      "  Task window: sart_1\n",
+      "\n",
+      "2. LOADING EVENT MARKERS\n",
+      "--------------------------------------------------------------------------------\n",
+      "Loading from: data/G3_1.4.2_2025-05-22T204215.885316_eGFub25vdmFhcmlhQHlhaG9vLmNvbQ/2025-05-23_eGFub25vdmFhcmlhQHlhaG9vLmNvbQ==_event_markers.csv\n",
+      "✓ Loaded 101466 rows\n",
+      "  Columns: ['timestamp', 'EDA', 'HR', 'BI', 'PG', 'event_marker', 'condition']\n",
+      "  ✓ Found 'timestamp' column (ISO format) - converting to unix_timestamp\n",
+      "  ⚠ Dropped 607 rows with invalid timestamps\n",
+      "  ✓ Converted 100859 timestamps from ISO to Unix format\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n1. LOADING CONFIGURATION\")\n",
     "print(\"-\" * 80)\n",
@@ -115,8 +146,7 @@
     "    folder_name, subject_folder, _ = subject_folders[0]\n",
     "    \n",
     "    print(f\"Using subject folder: {folder_name}\")\n",
-    "    \n",
-    "    # Load manifest\n",
+    "\n",
     "    manifest_path = os.path.join(subject_folder, 'file_manifest.json')\n",
     "    with open(manifest_path, 'r') as f:\n",
     "        manifest = json.load(f)\n",
@@ -125,7 +155,6 @@
     "    print(f\"  EmotiBit files: {len(manifest.get('emotibit_files', []))}\")\n",
     "    print(f\"  Event markers: {'Yes' if manifest.get('event_markers') else 'No'}\")\n",
     "    \n",
-    "    # Get analysis configuration\n",
     "    analysis_config = manifest.get('analysis_config', {})\n",
     "    selected_metrics = analysis_config.get('selected_metrics', [])\n",
     "    baseline_window = analysis_config.get('baseline_window', {})\n",
@@ -139,10 +168,6 @@
     "        results['warnings'].append('Analysis configuration incomplete - using defaults')\n",
     "        print(\"  ⚠ Warning: Analysis configuration incomplete\")\n",
     "\n",
-    "# ============================================================================\n",
-    "# LOAD EVENT MARKERS\n",
-    "# ============================================================================\n",
-    "\n",
     "print(\"\\n2. LOADING EVENT MARKERS\")\n",
     "print(\"-\" * 80)\n",
     "\n",
@@ -155,14 +180,12 @@
     "        print(f\"✓ Loaded {df_markers.shape[0]} rows\")\n",
     "        print(f\"  Columns: {df_markers.columns.tolist()}\")\n",
     "        \n",
-    "        # Prepare timestamps\n",
     "        df_markers = prepare_event_markers_timestamps(df_markers)\n",
     "        \n",
-    "        # Store results\n",
     "        results['markers'] = {\n",
     "            'shape': df_markers.shape,\n",
     "            'columns': list(df_markers.columns),\n",
-    "            'head': df_markers.head(10).to_dict('records')\n",
+    "            'head': df_markers.head(10).replace({np.nan: None}).to_dict('records')\n",
     "        }\n",
     "        \n",
     "        if 'condition' in df_markers.columns:\n",
@@ -180,10 +203,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cf06dd6f",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-14T16:35:20.346590Z",
+     "iopub.status.busy": "2025-10-14T16:35:20.346521Z",
+     "iopub.status.idle": "2025-10-14T16:36:54.227539Z",
+     "shell.execute_reply": "2025-10-14T16:36:54.227134Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "3. ANALYZING SELECTED METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "Analyzing metric: HR\n",
+      "----------------------------------------\n",
+      "  Loading: 2025-05-22_20-42-36_eGFub25vdmFhcmlhQHlhaG9vLmNvbQ==_emotibit_ground_truth_HR.csv\n",
+      "  ✓ Loaded 5563 rows\n",
+      "  Calculating timestamp offset...\n",
+      "  Event Marker Start: 2025-05-22 13:42:36.738613\n",
+      "  EmotiBit Start: 2025-05-22 20:33:59.566568\n",
+      "  Calculated Offset: -24682.83s (-6.86 hours)\n",
+      "\n",
+      "  Extracting BASELINE window data...\n",
+      "  Found 2573 occurrences of 'biometric_baseline'\n",
+      "  Extracted 142 data points across all occurrences\n",
+      "\n",
+      "  Extracting TASK window data...\n",
+      "  Found 7578 occurrences of 'sart_1'\n",
+      "  Extracted 396 data points across all occurrences\n",
+      "\n",
+      "  Baseline HR: mean=72.96, std=4.45, n=142\n",
+      "  Task HR: mean=68.17, std=4.94, n=396\n",
+      "\n",
+      "  Creating visualizations...\n",
+      "    ✓ Saved: HR_comparison.png\n",
+      "    ✓ Saved: HR_timeseries.png\n",
+      "    ✓ Saved: HR_distribution.png\n"
+     ]
+    }
+   ],
    "source": [
     "if df_markers is not None and selected_metrics:\n",
     "    \n",
@@ -195,7 +260,6 @@
     "        print(\"-\" * 40)\n",
     "        \n",
     "        try:\n",
-    "            # Find the metric file\n",
     "            metric_file = None\n",
     "            for emotibit_file in manifest['emotibit_files']:\n",
     "                if f'_{metric}.csv' in emotibit_file['filename']:\n",
@@ -209,16 +273,13 @@
     "            print(f\"  Loading: {os.path.basename(metric_file)}\")\n",
     "            df_metric = pd.read_csv(metric_file)\n",
     "            print(f\"  ✓ Loaded {df_metric.shape[0]} rows\")\n",
-    "            \n",
-    "            # Calculate offset\n",
+    "        \n",
     "            print(f\"  Calculating timestamp offset...\")\n",
     "            offset = find_timestamp_offset(df_markers, df_metric)\n",
     "            \n",
-    "            # Extract baseline window data\n",
     "            print(f\"\\n  Extracting BASELINE window data...\")\n",
     "            baseline_data = extract_window_data(df_metric, df_markers, offset, baseline_window)\n",
     "            \n",
-    "            # Extract task window data\n",
     "            print(f\"\\n  Extracting TASK window data...\")\n",
     "            task_data = extract_window_data(df_metric, df_markers, offset, task_window)\n",
     "            \n",
@@ -226,10 +287,8 @@
     "                print(f\"  ⚠ Warning: Insufficient data for comparison - skipping {metric}\")\n",
     "                continue\n",
     "            \n",
-    "            # Get metric column (last column)\n",
     "            metric_col = df_metric.columns[-1]\n",
     "            \n",
-    "            # Calculate statistics\n",
     "            baseline_values = baseline_data[metric_col].dropna()\n",
     "            task_values = task_data[metric_col].dropna()\n",
     "            \n",
@@ -252,17 +311,12 @@
     "            print(f\"\\n  Baseline {metric}: mean={baseline_stats['mean']:.2f}, std={baseline_stats['std']:.2f}, n={baseline_stats['count']}\")\n",
     "            print(f\"  Task {metric}: mean={task_stats['mean']:.2f}, std={task_stats['std']:.2f}, n={task_stats['count']}\")\n",
     "            \n",
-    "            # Store analysis results\n",
     "            results['analysis'][metric] = {\n",
     "                'baseline': baseline_stats,\n",
     "                'task': task_stats,\n",
     "                'difference': task_stats['mean'] - baseline_stats['mean'],\n",
     "                'percent_change': ((task_stats['mean'] - baseline_stats['mean']) / baseline_stats['mean'] * 100) if baseline_stats['mean'] != 0 else 0\n",
     "            }\n",
-    "            \n",
-    "            # ================================================================\n",
-    "            # CREATE VISUALIZATIONS\n",
-    "            # ================================================================\n",
     "            \n",
     "            print(f\"\\n  Creating visualizations...\")\n",
     "            \n",
@@ -279,8 +333,7 @@
     "            ax.set_ylabel(f'{metric} Value', fontsize=12)\n",
     "            ax.set_title(f'{metric}: Baseline vs Task Comparison', fontsize=14, fontweight='bold')\n",
     "            ax.grid(True, alpha=0.3, axis='y', linestyle='--')\n",
-    "            \n",
-    "            # Add value labels on bars\n",
+    "        \n",
     "            for i, (mean, std) in enumerate(zip(means, stds)):\n",
     "                ax.text(i, mean + std + 0.05 * max(means), f'{mean:.2f}±{std:.2f}',\n",
     "                       ha='center', va='bottom', fontsize=10, fontweight='bold')\n",
@@ -300,17 +353,14 @@
     "            # Plot 2: Time series overlay\n",
     "            fig, ax = plt.subplots(figsize=(14, 6))\n",
     "            \n",
-    "            # Plot baseline data\n",
     "            baseline_times = np.arange(len(baseline_values))\n",
     "            ax.plot(baseline_times, baseline_values, linewidth=0.8, \n",
     "                   color='#4CAF50', alpha=0.7, label='Baseline')\n",
     "            \n",
-    "            # Plot task data (offset on x-axis for clarity)\n",
     "            task_times = np.arange(len(task_values)) + len(baseline_values) + 100\n",
     "            ax.plot(task_times, task_values, linewidth=0.8, \n",
     "                   color='#2196F3', alpha=0.7, label='Task')\n",
     "            \n",
-    "            # Add vertical separator\n",
     "            separator_x = len(baseline_values) + 50\n",
     "            ax.axvline(x=separator_x, color='red', linestyle='--', linewidth=2, alpha=0.5)\n",
     "            \n",
@@ -339,7 +389,6 @@
     "            bp = ax.boxplot(data_to_plot, labels=categories, patch_artist=True,\n",
     "                           showmeans=True, meanline=True)\n",
     "            \n",
-    "            # Color the boxes\n",
     "            colors = ['#4CAF50', '#2196F3']\n",
     "            for patch, color in zip(bp['boxes'], colors):\n",
     "                patch.set_facecolor(color)\n",
@@ -374,10 +423,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b040aba8",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-14T16:36:54.230788Z",
+     "iopub.status.busy": "2025-10-14T16:36:54.230664Z",
+     "iopub.status.idle": "2025-10-14T16:36:54.234625Z",
+     "shell.execute_reply": "2025-10-14T16:36:54.234379Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "4. SAVING RESULTS\n",
+      "--------------------------------------------------------------------------------\n",
+      "✓ Analysis complete!\n",
+      "  Status: completed\n",
+      "  Plots generated: 3\n",
+      "  Metrics analyzed: 1\n",
+      "\n",
+      "================================================================================\n",
+      "ANALYSIS COMPLETE\n",
+      "================================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n4. SAVING RESULTS\")\n",
     "print(\"-\" * 80)\n",
