debugged nan error

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -6,10 +6,10 @@
    "id": "fd3a4bb5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-14T16:35:19.667760Z",
-     "iopub.status.busy": "2025-10-14T16:35:19.667496Z",
-     "iopub.status.idle": "2025-10-14T16:35:20.236880Z",
-     "shell.execute_reply": "2025-10-14T16:35:20.236604Z"
+     "iopub.execute_input": "2025-10-14T17:37:17.526681Z",
+     "iopub.status.busy": "2025-10-14T17:37:17.526532Z",
+     "iopub.status.idle": "2025-10-14T17:37:18.418083Z",
+     "shell.execute_reply": "2025-10-14T17:37:18.417768Z"
     }
    },
    "outputs": [],
@@ -39,7 +39,6 @@
     "    'timestamp': datetime.now().isoformat(),\n",
     "    'errors': [],\n",
     "    'warnings': [],\n",
-    "    'ground_truth': {},\n",
     "    'markers': {},\n",
     "    'analysis': {},\n",
     "    'plots': []\n",
@@ -48,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6d62722e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-14T16:35:20.238488Z",
-     "iopub.status.busy": "2025-10-14T16:35:20.238361Z",
-     "iopub.status.idle": "2025-10-14T16:35:20.241601Z",
-     "shell.execute_reply": "2025-10-14T16:35:20.241393Z"
+     "iopub.execute_input": "2025-10-14T17:37:18.421055Z",
+     "iopub.status.busy": "2025-10-14T17:37:18.420759Z",
+     "iopub.status.idle": "2025-10-14T17:37:18.424625Z",
+     "shell.execute_reply": "2025-10-14T17:37:18.424342Z"
     }
    },
    "outputs": [
@@ -84,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f17c4dd4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-14T16:35:20.242877Z",
-     "iopub.status.busy": "2025-10-14T16:35:20.242772Z",
-     "iopub.status.idle": "2025-10-14T16:35:20.345168Z",
-     "shell.execute_reply": "2025-10-14T16:35:20.344900Z"
+     "iopub.execute_input": "2025-10-14T17:37:18.426232Z",
+     "iopub.status.busy": "2025-10-14T17:37:18.426127Z",
+     "iopub.status.idle": "2025-10-14T17:37:18.528728Z",
+     "shell.execute_reply": "2025-10-14T17:37:18.528437Z"
     }
    },
    "outputs": [
@@ -108,7 +107,7 @@
       "  Event markers: Yes\n",
       "  Selected metrics: ['HR']\n",
       "  Baseline window: biometric_baseline\n",
-      "  Task window: sart_1\n",
+      "  Task window: prs_2\n",
       "\n",
       "2. LOADING EVENT MARKERS\n",
       "--------------------------------------------------------------------------------\n",
@@ -207,10 +206,10 @@
    "id": "cf06dd6f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-14T16:35:20.346590Z",
-     "iopub.status.busy": "2025-10-14T16:35:20.346521Z",
-     "iopub.status.idle": "2025-10-14T16:36:54.227539Z",
-     "shell.execute_reply": "2025-10-14T16:36:54.227134Z"
+     "iopub.execute_input": "2025-10-14T17:37:18.530637Z",
+     "iopub.status.busy": "2025-10-14T17:37:18.530407Z",
+     "iopub.status.idle": "2025-10-14T17:37:51.319443Z",
+     "shell.execute_reply": "2025-10-14T17:37:51.319084Z"
     }
    },
    "outputs": [
@@ -236,11 +235,11 @@
       "  Extracted 142 data points across all occurrences\n",
       "\n",
       "  Extracting TASK window data...\n",
-      "  Found 7578 occurrences of 'sart_1'\n",
-      "  Extracted 396 data points across all occurrences\n",
+      "  Found 1171 occurrences of 'prs_2'\n",
+      "  Extracted 57 data points across all occurrences\n",
       "\n",
       "  Baseline HR: mean=72.96, std=4.45, n=142\n",
-      "  Task HR: mean=68.17, std=4.94, n=396\n",
+      "  Task HR: mean=60.71, std=1.50, n=57\n",
       "\n",
       "  Creating visualizations...\n",
       "    ✓ Saved: HR_comparison.png\n",
@@ -427,10 +426,10 @@
    "id": "b040aba8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-14T16:36:54.230788Z",
-     "iopub.status.busy": "2025-10-14T16:36:54.230664Z",
-     "iopub.status.idle": "2025-10-14T16:36:54.234625Z",
-     "shell.execute_reply": "2025-10-14T16:36:54.234379Z"
+     "iopub.execute_input": "2025-10-14T17:37:51.321668Z",
+     "iopub.status.busy": "2025-10-14T17:37:51.321556Z",
+     "iopub.status.idle": "2025-10-14T17:37:51.326084Z",
+     "shell.execute_reply": "2025-10-14T17:37:51.325812Z"
     }
    },
    "outputs": [
