Added individual time series to notebook

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -6,10 +6,10 @@
    "id": "fd3a4bb5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-14T23:11:49.592982Z",
-     "iopub.status.busy": "2025-10-14T23:11:49.592687Z",
-     "iopub.status.idle": "2025-10-14T23:11:50.276801Z",
-     "shell.execute_reply": "2025-10-14T23:11:50.276511Z"
+     "iopub.execute_input": "2025-10-15T18:45:49.306849Z",
+     "iopub.status.busy": "2025-10-15T18:45:49.306725Z",
+     "iopub.status.idle": "2025-10-15T18:45:50.033176Z",
+     "shell.execute_reply": "2025-10-15T18:45:50.032794Z"
     }
    },
    "outputs": [],
@@ -51,10 +51,10 @@
    "id": "6d62722e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-14T23:11:50.278535Z",
-     "iopub.status.busy": "2025-10-14T23:11:50.278374Z",
-     "iopub.status.idle": "2025-10-14T23:11:50.281858Z",
-     "shell.execute_reply": "2025-10-14T23:11:50.281633Z"
+     "iopub.execute_input": "2025-10-15T18:45:50.045625Z",
+     "iopub.status.busy": "2025-10-15T18:45:50.045370Z",
+     "iopub.status.idle": "2025-10-15T18:45:50.049392Z",
+     "shell.execute_reply": "2025-10-15T18:45:50.049020Z"
     }
    },
    "outputs": [
@@ -87,10 +87,10 @@
    "id": "f17c4dd4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-14T23:11:50.283202Z",
-     "iopub.status.busy": "2025-10-14T23:11:50.283112Z",
-     "iopub.status.idle": "2025-10-14T23:11:50.387741Z",
-     "shell.execute_reply": "2025-10-14T23:11:50.387334Z"
+     "iopub.execute_input": "2025-10-15T18:45:50.052525Z",
+     "iopub.status.busy": "2025-10-15T18:45:50.052382Z",
+     "iopub.status.idle": "2025-10-15T18:45:50.181778Z",
+     "shell.execute_reply": "2025-10-15T18:45:50.181451Z"
     }
    },
    "outputs": [
@@ -203,10 +203,10 @@
    "id": "cf06dd6f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-14T23:11:50.389979Z",
-     "iopub.status.busy": "2025-10-14T23:11:50.389852Z",
-     "iopub.status.idle": "2025-10-14T23:12:26.275113Z",
-     "shell.execute_reply": "2025-10-14T23:12:26.274568Z"
+     "iopub.execute_input": "2025-10-15T18:45:50.183551Z",
+     "iopub.status.busy": "2025-10-15T18:45:50.183417Z",
+     "iopub.status.idle": "2025-10-15T18:47:33.805997Z",
+     "shell.execute_reply": "2025-10-15T18:47:33.805608Z"
     }
    },
    "outputs": [
@@ -227,22 +227,22 @@
       "  EmotiBit Start: 2025-05-22 20:33:59.566568\n",
       "  Calculated Offset: -24682.83s (-6.86 hours)\n",
       "\n",
-      "  Extracting data for 'Group 1'...\n",
+      "  Extracting data for 'Baseline'...\n",
       "  Found 2573 occurrences of 'biometric_baseline'\n",
       "  Extracted 142 data points across all occurrences\n",
       "\n",
-      "  Extracting data for 'Group 2'...\n",
-      "  Found 1217 occurrences of 'prs_1'\n",
-      "  Extracted 61 data points across all occurrences\n",
+      "  Extracting data for 'SART 1'...\n",
+      "  Found 7578 occurrences of 'sart_1'\n",
+      "  Extracted 396 data points across all occurrences\n",
       "\n",
-      "  Group 1: mean=72.96, std=4.45, n=142\n",
+      "  Baseline: mean=72.96, std=4.45, n=142\n",
       "\n",
-      "  Group 2: mean=63.96, std=1.42, n=61\n",
+      "  SART 1: mean=68.17, std=4.94, n=396\n",
       "\n",
       "  Creating visualizations...\n",
-      "    ✓ Saved: HR_comparison.png\n",
+      "    ✓ Saved: HR_individual_timeseries.png\n",
       "    ✓ Saved: HR_timeseries.png\n",
-      "    ✓ Saved: HR_distribution.png\n"
+      "    ✓ Saved: HR_comparison.png\n"
      ]
     }
    ],
@@ -326,41 +326,57 @@
     "            colors = ['#4CAF50', '#2196F3', '#FF9800', '#9C27B0', '#F44336', \n",
     "                      '#00BCD4', '#FFEB3B', '#795548', '#607D8B', '#E91E63']\n",
     "            \n",
-    "            # Plot 1: Comparison bar plot\n",
-    "            fig, ax = plt.subplots(figsize=(max(10, len(group_data) * 2), 6))\n",
-    "            \n",
     "            group_labels = list(metric_results.keys())\n",
-    "            means = [metric_results[label]['mean'] for label in group_labels]\n",
-    "            stds = [metric_results[label]['std'] for label in group_labels]\n",
     "            \n",
-    "            x_pos = np.arange(len(group_labels))\n",
-    "            bars = ax.bar(x_pos, means, yerr=stds, capsize=10, \n",
-    "                         color=[colors[i % len(colors)] for i in range(len(group_labels))], \n",
-    "                         alpha=0.7, edgecolor='black')\n",
-    "            \n",
-    "            ax.set_xticks(x_pos)\n",
-    "            ax.set_xticklabels(group_labels, rotation=45, ha='right')\n",
-    "            ax.set_ylabel(f'{metric} Value', fontsize=12)\n",
-    "            ax.set_title(f'{metric}: Multi-Group Comparison', fontsize=14, fontweight='bold')\n",
-    "            ax.grid(True, alpha=0.3, axis='y', linestyle='--')\n",
-    "            \n",
-    "            # Add value labels on bars\n",
-    "            for i, (mean, std) in enumerate(zip(means, stds)):\n",
-    "                ax.text(i, mean + std + 0.05 * max(means), f'{mean:.2f}±{std:.2f}',\n",
-    "                       ha='center', va='bottom', fontsize=9, fontweight='bold')\n",
-    "            \n",
+    "            # Plot 1: Individual time series for each comparison group\n",
+    "            num_groups = len(group_data)\n",
+    "            fig, axes = plt.subplots(num_groups, 1, figsize=(14, 4 * num_groups), squeeze=False)\n",
+    "\n",
+    "            for idx, (group_label, data) in enumerate(group_data.items()):\n",
+    "                ax = axes[idx, 0]\n",
+    "                values = data[metric_col].dropna()\n",
+    "                \n",
+    "                # Convert to elapsed time in seconds from start of this specific event\n",
+    "                timestamps = data['AdjustedTimestamp'].values\n",
+    "                start_time = timestamps.min()\n",
+    "                elapsed_seconds = timestamps - start_time\n",
+    "                \n",
+    "                color = colors[idx % len(colors)]\n",
+    "                \n",
+    "                # Plot line and scatter\n",
+    "                ax.plot(elapsed_seconds, values, color=color, linewidth=1.5, alpha=0.8)\n",
+    "                ax.scatter(elapsed_seconds, values, color=color, s=12, alpha=0.6)\n",
+    "                \n",
+    "                # Add mean line\n",
+    "                mean_val = values.mean()\n",
+    "                ax.axhline(y=mean_val, color='red', linestyle='--', alpha=0.5, \n",
+    "                        label=f'Mean: {mean_val:.2f}')\n",
+    "                \n",
+    "                # Statistics text box\n",
+    "                stats_text = f'Mean: {values.mean():.2f}\\nStd: {values.std():.2f}\\nn: {len(values)}'\n",
+    "                ax.text(0.98, 0.97, stats_text, transform=ax.transAxes,\n",
+    "                    verticalalignment='top', horizontalalignment='right',\n",
+    "                    bbox=dict(boxstyle='round', facecolor='white', alpha=0.8),\n",
+    "                    fontsize=9, family='monospace')\n",
+    "                \n",
+    "                ax.set_xlabel('Elapsed Time (seconds)', fontsize=11)\n",
+    "                ax.set_ylabel(f'{metric} Value', fontsize=11)\n",
+    "                ax.set_title(f'{group_label}', fontsize=12, fontweight='bold', color=color)\n",
+    "                ax.grid(True, alpha=0.3, linestyle='--')\n",
+    "                ax.legend(loc='upper left', fontsize=9)\n",
+    "\n",
     "            plt.tight_layout()\n",
-    "            plot1_path = os.path.join(OUTPUT_FOLDER, f'{metric}_comparison.png')\n",
+    "            plot1_path = os.path.join(OUTPUT_FOLDER, f'{metric}_individual_timeseries.png')\n",
     "            plt.savefig(plot1_path, dpi=100, bbox_inches='tight')\n",
     "            plt.close()\n",
-    "            \n",
+    "\n",
     "            results['plots'].append({\n",
-    "                'name': f'{metric} Comparison',\n",
+    "                'name': f'{metric} Individual Time Series',\n",
     "                'path': plot1_path,\n",
-    "                'filename': f'{metric}_comparison.png',\n",
-    "                'url': f'/api/plot/{metric}_comparison.png'\n",
+    "                'filename': f'{metric}_individual_timeseries.png',\n",
+    "                'url': f'/api/plot/{metric}_individual_timeseries.png'\n",
     "            })\n",
-    "            print(f\"    ✓ Saved: {metric}_comparison.png\")\n",
+    "            print(f\"    ✓ Saved: {metric}_individual_timeseries.png\")\n",
     "            \n",
     "            # Plot 2: Time series - chronological progression\n",
     "            fig, ax = plt.subplots(figsize=(16, 6))\n",
@@ -453,35 +469,41 @@
     "            })\n",
     "            print(f\"    ✓ Saved: {metric}_timeseries.png\")\n",
     "            \n",
-    "            # Plot 3: Distribution comparison (box plots)\n",
+    "            # Plot 3: Comparison summary (bar chart with stats)\n",
     "            fig, ax = plt.subplots(figsize=(max(10, len(group_data) * 2), 6))\n",
-    "            \n",
-    "            data_to_plot = [group_data[label][metric_col].dropna() for label in group_labels]\n",
-    "            bp = ax.boxplot(data_to_plot, labels=group_labels, patch_artist=True,\n",
-    "                           showmeans=True, meanline=True)\n",
-    "            \n",
-    "            # Color the boxes\n",
-    "            for patch, color_idx in zip(bp['boxes'], range(len(group_labels))):\n",
-    "                patch.set_facecolor(colors[color_idx % len(colors)])\n",
-    "                patch.set_alpha(0.7)\n",
-    "            \n",
+    "\n",
+    "            group_labels = list(metric_results.keys())\n",
+    "            means = [metric_results[label]['mean'] for label in group_labels]\n",
+    "            stds = [metric_results[label]['std'] for label in group_labels]\n",
+    "\n",
+    "            x_pos = np.arange(len(group_labels))\n",
+    "            bars = ax.bar(x_pos, means, yerr=stds, capsize=10, \n",
+    "                        color=[colors[i % len(colors)] for i in range(len(group_labels))], \n",
+    "                        alpha=0.7, edgecolor='black', linewidth=1.5)\n",
+    "\n",
+    "            ax.set_xticks(x_pos)\n",
     "            ax.set_xticklabels(group_labels, rotation=45, ha='right')\n",
     "            ax.set_ylabel(f'{metric} Value', fontsize=12)\n",
-    "            ax.set_title(f'{metric} Distribution: Multi-Group Comparison', fontsize=14, fontweight='bold')\n",
+    "            ax.set_title(f'{metric}: Statistical Comparison', fontsize=14, fontweight='bold')\n",
     "            ax.grid(True, alpha=0.3, axis='y', linestyle='--')\n",
+    "\n",
+    "            # Add value labels on bars\n",
+    "            for i, (mean, std) in enumerate(zip(means, stds)):\n",
+    "                ax.text(i, mean + std + 0.05 * max(means), f'{mean:.2f}±{std:.2f}',\n",
+    "                    ha='center', va='bottom', fontsize=9, fontweight='bold')\n",
+    "\n",
     "            plt.tight_layout()\n",
-    "            \n",
-    "            plot3_path = os.path.join(OUTPUT_FOLDER, f'{metric}_distribution.png')\n",
+    "            plot3_path = os.path.join(OUTPUT_FOLDER, f'{metric}_comparison.png')\n",
     "            plt.savefig(plot3_path, dpi=100, bbox_inches='tight')\n",
     "            plt.close()\n",
-    "            \n",
+    "\n",
     "            results['plots'].append({\n",
-    "                'name': f'{metric} Distribution',\n",
+    "                'name': f'{metric} Statistical Comparison',\n",
     "                'path': plot3_path,\n",
-    "                'filename': f'{metric}_distribution.png',\n",
-    "                'url': f'/api/plot/{metric}_distribution.png'\n",
+    "                'filename': f'{metric}_comparison.png',\n",
+    "                'url': f'/api/plot/{metric}_comparison.png'\n",
     "            })\n",
-    "            print(f\"    ✓ Saved: {metric}_distribution.png\")\n",
+    "            print(f\"    ✓ Saved: {metric}_comparison.png\")\n",
     "            \n",
     "        except Exception as e:\n",
     "            error_msg = f\"Error analyzing {metric}: {str(e)}\"\n",
@@ -500,10 +522,10 @@
    "id": "b040aba8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-14T23:12:26.279133Z",
-     "iopub.status.busy": "2025-10-14T23:12:26.278938Z",
-     "iopub.status.idle": "2025-10-14T23:12:26.285125Z",
-     "shell.execute_reply": "2025-10-14T23:12:26.284606Z"
+     "iopub.execute_input": "2025-10-15T18:47:33.809700Z",
+     "iopub.status.busy": "2025-10-15T18:47:33.809594Z",
+     "iopub.status.idle": "2025-10-15T18:47:33.813547Z",
+     "shell.execute_reply": "2025-10-15T18:47:33.813277Z"
     }
    },
    "outputs": [
