--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fd3a4bb5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-16T16:26:53.314698Z",
-     "iopub.status.busy": "2025-10-16T16:26:53.314394Z",
-     "iopub.status.idle": "2025-10-16T16:26:56.447205Z",
-     "shell.execute_reply": "2025-10-16T16:26:56.446840Z"
+     "iopub.execute_input": "2025-10-16T20:26:42.069697Z",
+     "iopub.status.busy": "2025-10-16T20:26:42.069082Z",
+     "iopub.status.idle": "2025-10-16T20:26:43.174680Z",
+     "shell.execute_reply": "2025-10-16T20:26:43.174318Z"
     }
    },
    "outputs": [],
@@ -19,6 +19,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib\n",
     "matplotlib.use('Agg')  \n",
+    "import neurokit2 as nk\n",
     "import os\n",
     "import json\n",
     "import re\n",
@@ -51,10 +52,10 @@
    "id": "6d62722e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-16T16:26:56.450732Z",
-     "iopub.status.busy": "2025-10-16T16:26:56.450569Z",
-     "iopub.status.idle": "2025-10-16T16:26:56.455284Z",
-     "shell.execute_reply": "2025-10-16T16:26:56.455031Z"
+     "iopub.execute_input": "2025-10-16T20:26:43.176534Z",
+     "iopub.status.busy": "2025-10-16T20:26:43.176377Z",
+     "iopub.status.idle": "2025-10-16T20:26:43.180708Z",
+     "shell.execute_reply": "2025-10-16T20:26:43.180373Z"
     }
    },
    "outputs": [
@@ -83,14 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f17c4dd4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-16T16:26:56.457201Z",
-     "iopub.status.busy": "2025-10-16T16:26:56.457083Z",
-     "iopub.status.idle": "2025-10-16T16:26:56.593506Z",
-     "shell.execute_reply": "2025-10-16T16:26:56.593221Z"
+     "iopub.execute_input": "2025-10-16T20:26:43.182127Z",
+     "iopub.status.busy": "2025-10-16T20:26:43.182020Z",
+     "iopub.status.idle": "2025-10-16T20:26:43.284224Z",
+     "shell.execute_reply": "2025-10-16T20:26:43.283971Z"
     }
    },
    "outputs": [
@@ -106,8 +107,7 @@
       "  EmotiBit files: 1\n",
       "  Event markers: Yes\n",
       "  Selected metrics: ['HR']\n",
-      "  Comparison groups: 1\n",
-      "  ⚠ Warning: Need at least 2 comparison groups\n",
+      "  Comparison groups: 2\n",
       "\n",
       "2. LOADING EVENT MARKERS\n",
       "--------------------------------------------------------------------------------\n",
@@ -198,14 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cf06dd6f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-16T16:26:56.595194Z",
-     "iopub.status.busy": "2025-10-16T16:26:56.595065Z",
-     "iopub.status.idle": "2025-10-16T16:27:21.952995Z",
-     "shell.execute_reply": "2025-10-16T16:27:21.952499Z"
+     "iopub.execute_input": "2025-10-16T20:26:43.285691Z",
+     "iopub.status.busy": "2025-10-16T20:26:43.285582Z",
+     "iopub.status.idle": "2025-10-16T20:28:18.546093Z",
+     "shell.execute_reply": "2025-10-16T20:28:18.545690Z"
     }
    },
    "outputs": [
@@ -230,12 +230,17 @@
       "  Found 2573 occurrences of 'biometric_baseline'\n",
       "  Extracted 142 data points across all occurrences\n",
       "\n",
+      "  Extracting data for 'SART 1'...\n",
+      "  Found 7578 occurrences of 'sart_1'\n",
+      "  Extracted 396 data points across all occurrences\n",
+      "\n",
       "  Baseline: mean=72.96, std=4.45, n=142\n",
+      "\n",
+      "  SART 1: mean=68.17, std=4.94, n=396\n",
       "\n",
       "  Creating visualizations...\n",
       "    ✓ Saved: HR_individual_timeseries.png\n",
-      "    ✓ Saved: HR_timeseries.png\n",
-      "    ✓ Saved: HR_comparison.png\n"
+      " ⚠ Skipping comparison plots - single group analysis\n"
      ]
     }
    ],
@@ -501,10 +506,10 @@
    "id": "b040aba8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-16T16:27:21.955604Z",
-     "iopub.status.busy": "2025-10-16T16:27:21.955465Z",
-     "iopub.status.idle": "2025-10-16T16:27:21.959581Z",
-     "shell.execute_reply": "2025-10-16T16:27:21.959348Z"
+     "iopub.execute_input": "2025-10-16T20:28:18.548544Z",
+     "iopub.status.busy": "2025-10-16T20:28:18.548419Z",
+     "iopub.status.idle": "2025-10-16T20:28:18.552808Z",
+     "shell.execute_reply": "2025-10-16T20:28:18.552503Z"
     }
    },
    "outputs": [
@@ -517,9 +522,8 @@
       "--------------------------------------------------------------------------------\n",
       "✓ Analysis complete!\n",
       "  Status: completed\n",
-      "  Plots generated: 3\n",
+      "  Plots generated: 1\n",
       "  Metrics analyzed: 1\n",
-      "  Warnings: 1\n",
       "\n",
       "================================================================================\n",
       "ANALYSIS COMPLETE\n",
